[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
crossbeam = "0.8.4"
futures = "0.3.30"
mini-redis = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"
