[package]
edition = "2021"
name = "yew-await"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = {git = "https://github.com/smol-rs/async-broadcast"}
futures = "0.3.30"
gloo-console = "0.3.0"
gloo-net = "0.5.0"
js-sys = "0.3.68"
nanoid = "0.4.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = {version = "0.3.68", features = [
  "Document",
  "Element",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "DomStringMap",
  "HtmlTextAreaElement",
  "Blob",
  "BlobEvent",
  "BlobPropertyBag",
  "Url",
  "MediaRecorder",
  "MediaStreamConstraints",
  "AudioContext",
  "AudioBuffer",
  "AnalyserNode",
  "AudioContextOptions",
  "MediaStream",
  "MediaStreamTrack",
  "MediaDevices",
  "Navigator",
  "EventListener",
  "EventTarget",
  "BaseAudioContext",
  "MediaStreamAudioSourceNode",
  "HtmlAudioElement",
  "CssStyleDeclaration",
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcRtpSender",
  "RtcTrackEvent",
  "RtcDataChannelEvent",
  "RtcIceConnectionState",
  "RtcIceCandidateInit",
]}
yew = {version = "0.21.0", features = ["csr"]}
yew-hooks = "0.3.0"
yew-router = "0.18.0"
